--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
   "name": "jj-utils",
   "version": "0.0.1",
   "description": "🚀 FE utils for anyone !",
-  "main": "index.js",
+  "main": "lib/index.js", 
+  "types": "lib/index.d.ts", 
+  "private": false,
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -17,9 +26,15 @@
     "Fast"
   ],
   "author": "junjie.Wang",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Wangjunjie991116/jj-utils/issues"
   },
-  "homepage": "https://github.com/Wangjunjie991116/jj-utils#readme"
+  "homepage": "https://github.com/Wangjunjie991116/jj-utils#readme",
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^5.2.2"
+  }
 }
