--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jj-utils",
+  "name": "jj-fast-utils",
   "version": "0.0.1",
   "description": "🚀 FE utils for anyone !",
   "main": "lib/index.js", 
