--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "jj-fast-utils",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "🚀 FE utils for anyone !",
-  "main": "lib/index.js", 
-  "types": "lib/index.d.ts", 
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "private": false,
   "files": [
     "lib/**/*"
@@ -13,6 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
+    "prepare": "husky install",
     "postversion": "git push && git push --tags"
   },
   "repository": {
@@ -32,9 +33,14 @@
   },
   "homepage": "https://github.com/Wangjunjie991116/jj-fast-utils#readme",
   "devDependencies": {
+    "@types/qs": "^6.9.8",
+    "husky": "^8.0.3",
     "prettier": "^3.0.3",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "qs": "^6.11.2"
   }
 }
