--- a/package.json
+++ b/package.json
@@ -1,46 +1,80 @@
 {
   "name": "jj-fast-utils",
   "version": "0.0.5",
-  "description": "🚀 FE utils for anyone !",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
   "private": false,
-  "files": [
-    "lib/**/*"
-  ],
-  "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json",
-    "prepare": "husky install",
-    "postversion": "git push && git push --tags"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Wangjunjie991116/jj-fast-utils.git"
-  },
+  "description": "🚀 FE utils for anyone !",
   "keywords": [
     "FE",
     "Utiles",
     "Anyone",
     "Fast"
   ],
-  "author": "junjie.Wang",
-  "license": "MIT",
+  "homepage": "https://github.com/Wangjunjie991116/jj-fast-utils#readme",
   "bugs": {
     "url": "https://github.com/Wangjunjie991116/jj-fast-utils/issues"
   },
-  "homepage": "https://github.com/Wangjunjie991116/jj-fast-utils#readme",
-  "devDependencies": {
-    "@types/qs": "^6.9.8",
-    "husky": "^8.0.3",
-    "prettier": "^3.0.3",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.2.2"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Wangjunjie991116/jj-fast-utils.git"
+  },
+  "license": "MIT",
+  "author": "junjie.Wang",
+  "type": "commonjs",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "browser": "dist/index.umd.js",
+  "types": "src/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
+  "scripts": {
+    "build": "rm -rf dist && rollup -c --bundleConfigAsCjs",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint 'src/**/*.{js,ts}'",
+    "prepare": "husky install",
+    "serve": "rollup -c -w",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postversion": "git push && git push --tags"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*./src/**/*.{js,ts,json,css,less,md,scss}": [
+      "eslint --fix",
+      "prettier --write",
+      "pnpm lint"
+    ],
+    "package.json": "sort-package-json"
   },
   "dependencies": {
     "qs": "^6.11.2"
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@rollup/plugin-alias": "^5.1.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/qs": "^6.9.8",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "eslint": "^9.0.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "rollup": "^4.14.3",
+    "sort-package-json": "^2.10.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^5.2.2"
+  },
+  "minHtml": "dist/index.min.js"
 }
