--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "rm -rf dist && rollup -c --bundleConfigAsCjs",
+    "build": "rm -rf dist && cross-env NODE_ENV=production && rollup -c --bundleConfigAsCjs",
+    "dev": "rm -rf dist && cross-env NODE_ENV=development && rollup -c --bundleConfigAsCjs",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint 'src/**/*.{js,ts}'",
     "prepare": "husky install",
@@ -38,7 +39,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
@@ -53,6 +55,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
@@ -63,6 +67,7 @@
     "@types/qs": "^6.9.8",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.1",
@@ -72,6 +77,7 @@
     "prettier": "^3.2.5",
     "rollup": "^4.14.3",
     "sort-package-json": "^2.10.0",
+    "tslib": "^2.6.2",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.2.2"
   },
