build: 构建工具优化、uitls TS 类型优化、PKG 包版本更新

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,13 @@
 		"strict": true,
 		"paths": { "@/*": ["src/*"] }
 	},
-	"include": ["src/**/*", "typing/**/*"],
+	"include": [
+		"src/**/*",
+		"typing/**/*",
+		".eslintrc.js",
+		"commitlint.config.js",
+		"babel.config.js",
+		"rollup.config.js"
+	],
 	"exclude": ["node_modules", "dist"]
 }
