--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
-	"editor.formatOnSave": true,
-	"prettier.requireConfig": true,
+	"editor.formatOnSave": true, // 开启保存文件自动格式化代码
+	"prettier.requireConfig": true, // 需要 Prettier 的配置文件
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.codeActionsOnSave": {
 		"source.fixAll": "explicit",
-		// "source.organizeImports": true,
-		// "source.fixAll.eslint": "explicit"
+		"source.fixAll.eslint": "explicit"
 	}
 }
