--- a/package.json
+++ b/package.json
@@ -68,13 +68,19 @@
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.0.0",
+    "eslint": "8.57.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-regexp": "1.15.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
+    "prettier": "2.7.1",
     "rollup": "^4.14.3",
     "sort-package-json": "^2.10.0",
     "tslib": "^2.6.2",
