--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jj-fast-utils",
-  "version": "0.0.40",
+  "version": "0.0.41",
   "private": false,
   "description": "🚀 FE utils for anyone !",
   "keywords": [
@@ -27,7 +27,7 @@
   "main": "dist/web.js",
   "types": "src/index.d.ts",
   "files": [
-    "dist/**/*"
+    "dist"
   ],
   "scripts": {
     "build": "rm -rf dist && cross-env NODE_ENV=production && rollup -c --bundleConfigAsCjs",
@@ -83,6 +83,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "2.7.1",
     "rollup": "^4.14.3",
+    "rollup-plugin-filesize": "^10.0.0",
     "sort-package-json": "^2.10.0",
     "tslib": "^2.6.2",
     "tslint-config-prettier": "^1.18.0",
